--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=KHJv2
+
+pring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:validate}
+spring.jpa.open-in-view=false
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+spring.jpa.show-sql=true
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_NAME}
+spring.datasource.username=${DB_USERNAME:root}
+spring.datasource.password=${DB_PASSWORD}
+
+jwt.secret=${JWT_SECRET}
+jwt.access-token-expiration=${JWT_ACCESS_EXPIRATION}
+
+discord.webhook.url=${DISCORD_WEBHOOK_URL}
