chore: spring 오타 수정 + 의도가 불명확한 generate-ddl를 false로 변경(#4)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=KHJv2
 
-pring.jpa.database=mysql
+spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:validate}
 spring.jpa.open-in-view=false
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.show-sql=true
