fix: spring.* 접두사는 Spring Boot 예약 네임스페이스이므로 사용 불가 -> app.*으로 변경(#7)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ jwt.access-token-expiration=${JWT_ACCESS_EXPIRATION}
 
 discord.webhook.url=${DISCORD_WEBHOOK_URL}
 
-spring.user.code=${SPRING_USER_CODE}
+app.verification.code=${SPRING_USER_CODE}
